--- a/DFOptimizerApp/app/src/main/res/values/strings.xml
+++ b/DFOptimizerApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DF Optimizer App</string>
-    <string name="login">Login</string>
+    <string name="login1">Login</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
